<resources>
    <string name="app_name">Restaurant Menu Journal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="restaurant_name">Restaurant Name</string>
    <string name="item_name">Item Name</string>
    <string name="item_good_things">What did you like?</string>
    <string name="item_bad_things">What didn\'t you like?</string>
    <string name="item_rating">Your rating:</string>

</resources>
