<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent" android:layout_height="fill_parent"
                  android:orientation="vertical" android:layout_weight="1">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/restaurant_name"/>
        <TextView android:layout_width="match_parent" android:layout_height="50dp"
                  android:paddingTop="15dp"
                  android:paddingBottom="15dp"
                  android:id="@+id/textView_restaurantName"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/item_name" />
        <TextView android:layout_width="match_parent" android:layout_height="50dp"
                  android:paddingTop="15dp"
                  android:paddingBottom="15dp"
                  android:id="@+id/textView_itemName"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/item_good_things"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:paddingTop="15dp"
                  android:paddingBottom="15dp"
                  android:singleLine="false"
                  android:id="@+id/textView_goodThings" android:gravity="top"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/item_bad_things"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:paddingTop="15dp"
                  android:paddingBottom="15dp"
                  android:singleLine="false"
                  android:id="@+id/textView_badThings" android:gravity="top"/>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="15dp">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/item_rating"
                      android:paddingEnd="5dp" android:layout_gravity="center" android:textSize="18sp"/>
            <RatingBar
                    android:id="@+id/ratingBar_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:saveEnabled="false"
                    android:numStars="5"
                    style="@android:style/Widget.Material.RatingBar"/>
        </LinearLayout>


    </LinearLayout>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="Edit" android:id="@+id/button_editItem"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" android:textSize="18sp"
            android:gravity="bottom|center_horizontal" android:layout_gravity="bottom" android:layout_weight="0"/>


</LinearLayout>